fixed main spacing

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 main {
 	margin: 2rem auto;
-	padding: 4.5rem 2rem 0;
+	padding: 6rem 2rem 0;
 	width: 700px;
 	background-color: black;
 	border: 1px solid #878787;
